Fix spacing for normal poster route numbers.

--- a/src/components/stopPoster/routes.css
+++ b/src/components/stopPoster/routes.css
@@ -56,7 +56,7 @@
 }
 
 .id {
-  padding: 0 0.429em 0 0;
+  padding: 0 12px;
   font-family: GothamXNarrow-Medium;
   font-size: 2.5em;
 }
@@ -64,7 +64,7 @@
 .simple .id {
   font-size: 1em;
   line-height: 0.9;
-  padding-right: 0.25em;
+  padding: 0 0.25em 0 0;
   min-width: 1.875em;
   margin-top: 3px;
 }
